--- a/sample-projects/distribution-code/project1/wiki/encyclopedia/templates/encyclopedia/index.html
+++ b/sample-projects/distribution-code/project1/wiki/encyclopedia/templates/encyclopedia/index.html
@@ -9,8 +9,10 @@
 
     <ul>
         {% for entry in entries %}
-            <li>{{ entry }}</li>
+            <li>
+                <a href="{{entry}}">{{entry}}</a>
+            </li>
         {% endfor %}
     </ul>
 
-{% endblock %}
+{% endblock %}127.0.0.1:8000/
